@@ -1,4 +1,7 @@
 5 марта 2019 г.
+Компилятор разделён на три модуля: Compiler, Scanner, Parser.
+
+5 марта 2019 г.
 Показан пример считывания диапазона множества {11..15}, лексема upto, приём 7FX
 
 26 февраля 2019 г.
